Fixes tests